[package]
edition = "2021"
name    = "esp32-s3-lcd-ev-board-example"
version = "0.1.0"

[[bin]]
name = "esp32-s3-lcd-ev-board-example"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "esp32s3",
  "log",
  "unstable",
  "psram",
] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }

embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "611bdc6" }
